--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,86 +1,87 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <title>UMA - IA da Somauma</title>
     <style>
         body {
-            background-color: #f5f2ed;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: Arial, sans-serif;
+            background: #f5f2eb;
             margin: 0;
             padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
         }
         header {
-            background-color: #4c5b3c;
-            color: white;
-            width: 100%;
-            padding: 20px 0;
+            background: #4b5d3d;
+            color: #fff;
+            padding: 1rem;
             text-align: center;
-            font-size: 1.5em;
+            font-size: 1.4rem;
         }
-        #chat-container {
-            background: #fff;
+        #chat {
             width: 90%;
-            max-width: 800px;
-            margin-top: 30px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-            padding: 20px;
-        }
-        #messages {
-            height: 400px;
-            overflow-y: auto;
+            max-width: 600px;
+            margin: 2rem auto;
+            background: #ffffff;
+            padding: 1rem;
+            border-radius: 8px;
             border: 1px solid #ccc;
-            padding: 15px;
-            margin-bottom: 10px;
-            background: #f9f9f9;
-            border-radius: 5px;
+            overflow-y: auto;
+            height: 400px;
         }
-        #userInput {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid #aaa;
-            border-radius: 5px;
-            font-size: 1em;
+        #chat p {
+            margin: 0.5rem 0;
         }
-        .user, .uma {
-            margin: 5px 0;
+        .user { font-weight: bold; }
+        .bot { color: #6d3318; }
+        #inputBox {
+            width: 90%;
+            max-width: 600px;
+            margin: 0 auto;
+            display: flex;
+            margin-bottom: 2rem;
         }
-        .user { color: #4c5b3c; }
-        .uma { color: #955e42; }
+        #question {
+            flex: 1;
+            padding: 0.5rem;
+            font-size: 1rem;
+        }
+        button {
+            background-color: #4b5d3d;
+            color: white;
+            border: none;
+            padding: 0.5rem 1rem;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
     <header>UMA - Assistente da Somauma</header>
-    <div id="chat-container">
-        <div id="messages"></div>
-        <input type="text" id="userInput" placeholder="Digite sua pergunta sobre a Somauma...">
+    <div id="chat"></div>
+    <div id="inputBox">
+        <input type="text" id="question" placeholder="Digite sua pergunta sobre a Somauma..." />
+        <button onclick="ask()">Enviar</button>
     </div>
+
     <script>
-        const input = document.getElementById('userInput');
-        const messages = document.getElementById('messages');
+        async function ask() {
+            const input = document.getElementById('question');
+            const chat = document.getElementById('chat');
+            const question = input.value.trim();
+            if (!question) return;
 
-        input.addEventListener('keypress', function (e) {
-            if (e.key === 'Enter') {
-                const userText = input.value;
-                messages.innerHTML += `<p class='user'><strong>Você:</strong> ${userText}</p>`;
-                input.value = '';
+            chat.innerHTML += `<p class="user">Você: ${question}</p>`;
+            input.value = '';
 
-                fetch('/chat', {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ message: userText })
-                })
-                .then(res => res.json())
-                .then(data => {
-                    messages.innerHTML += `<p class='uma'><strong>UMA:</strong> ${data.reply}</p>`;
-                    messages.scrollTop = messages.scrollHeight;
-                });
-            }
-        });
+            const response = await fetch('https://uma-somauma.onrender.com/ask', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ question })
+            });
+
+            const data = await response.json();
+            chat.innerHTML += `<p class="bot">UMA: ${data.answer}</p>`;
+            chat.scrollTop = chat.scrollHeight;
+        }
     </script>
 </body>
 </html>
