--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,83 +4,46 @@
     <meta charset="UTF-8">
     <title>UMA - IA da Somauma</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: #f5f2eb;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background: #4b5d3d;
-            color: #fff;
-            padding: 1rem;
-            text-align: center;
-            font-size: 1.4rem;
-        }
-        #chat {
-            width: 90%;
-            max-width: 600px;
-            margin: 2rem auto;
-            background: #ffffff;
-            padding: 1rem;
-            border-radius: 8px;
-            border: 1px solid #ccc;
-            overflow-y: auto;
-            height: 400px;
-        }
-        #chat p {
-            margin: 0.5rem 0;
-        }
+        body { font-family: Arial, sans-serif; background-color: #f6f4ef; margin: 0; padding: 0; }
+        .header { background-color: #3c5133; color: #fff; padding: 20px; text-align: center; font-size: 1.5em; }
+        .chatbox { width: 80%; max-width: 700px; margin: 20px auto; background: #fff; padding: 20px; border-radius: 8px; }
+        .messages { height: 300px; overflow-y: auto; margin-bottom: 10px; border: 1px solid #ccc; padding: 10px; }
+        .input-area { display: flex; }
+        input[type="text"] { flex: 1; padding: 10px; font-size: 1em; }
+        button { padding: 10px 20px; background: #3c5133; color: #fff; border: none; cursor: pointer; }
+        button:hover { background: #2f4027; }
         .user { font-weight: bold; }
-        .bot { color: #6d3318; }
-        #inputBox {
-            width: 90%;
-            max-width: 600px;
-            margin: 0 auto;
-            display: flex;
-            margin-bottom: 2rem;
-        }
-        #question {
-            flex: 1;
-            padding: 0.5rem;
-            font-size: 1rem;
-        }
-        button {
-            background-color: #4b5d3d;
-            color: white;
-            border: none;
-            padding: 0.5rem 1rem;
-            cursor: pointer;
-        }
+        .uma { color: #7b4f2c; }
     </style>
 </head>
 <body>
-    <header>UMA - Assistente da Somauma</header>
-    <div id="chat"></div>
-    <div id="inputBox">
-        <input type="text" id="question" placeholder="Digite sua pergunta sobre a Somauma..." />
-        <button onclick="ask()">Enviar</button>
+    <div class="header">UMA - Assistente da Somauma</div>
+    <div class="chatbox">
+        <div class="messages" id="messages"></div>
+        <div class="input-area">
+            <input type="text" id="userInput" placeholder="Digite sua pergunta sobre a Somauma...">
+            <button onclick="sendMessage()">Enviar</button>
+        </div>
     </div>
-
     <script>
-        async function ask() {
-            const input = document.getElementById('question');
-            const chat = document.getElementById('chat');
-            const question = input.value.trim();
-            if (!question) return;
+        async function sendMessage() {
+            const input = document.getElementById('userInput');
+            const message = input.value.trim();
+            if (!message) return;
 
-            chat.innerHTML += `<p class="user">Você: ${question}</p>`;
-            input.value = '';
+            const messagesDiv = document.getElementById('messages');
+            messagesDiv.innerHTML += `<div><span class='user'>Você:</span> ${message}</div>`;
+            input.value = "";
 
-            const response = await fetch('https://uma-somauma.onrender.com/ask', {
+            const response = await fetch('/api', {
                 method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ question })
+                headers: {'Content-Type': 'application/json'},
+                body: JSON.stringify({ message })
             });
 
             const data = await response.json();
-            chat.innerHTML += `<p class="bot">UMA: ${data.answer}</p>`;
-            chat.scrollTop = chat.scrollHeight;
+            messagesDiv.innerHTML += `<div><span class='uma'>UMA:</span> ${data.reply || "Erro na resposta."}</div>`;
+            messagesDiv.scrollTop = messagesDiv.scrollHeight;
         }
     </script>
 </body>
