--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>UMA - Assistente da Somauma</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <div class="container">
         <h1>UMA - Assistente da Somauma</h1>
-        <div id="chat-box">
-            <div class="message user">Você: oi</div>
-            <div class="message uma">UMA: Olá! Bem-vindo(a) à Somauma. Como posso te ajudar hoje?</div>
+        <div class="chat-box" id="chat-box"></div>
+        <div class="input-box">
+            <input type="text" id="user-input" placeholder="Digite sua pergunta..." />
+            <button onclick="sendMessage()">Enviar</button>
         </div>
-        <form id="chat-form">
-            <input type="text" id="user-input" placeholder="Digite sua pergunta..." autocomplete="off" />
-            <button type="submit">Enviar</button>
-        </form>
     </div>
     <script src="script.js"></script>
 </body>
