--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="UTF-8">
     <title>UMA - Assistente da Somauma</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <div id="chat-box">
         <h1>UMA - Assistente da Somauma</h1>
-        <div class="chat-box" id="chat-box"></div>
-        <div class="input-box">
-            <input type="text" id="user-input" placeholder="Digite sua pergunta..." />
-            <button onclick="sendMessage()">Enviar</button>
-        </div>
+        <div id="conversation"></div>
+        <form id="form">
+            <input type="text" id="input" placeholder="Digite sua pergunta..." autocomplete="off">
+            <button type="submit">Enviar</button>
+        </form>
     </div>
     <script src="script.js"></script>
 </body>
