--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -6,11 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="chat-box">
+    <div class="chat-container">
         <h1>UMA - Assistente da Somauma</h1>
-        <div id="conversation"></div>
-        <form id="form">
-            <input type="text" id="input" placeholder="Digite sua pergunta..." autocomplete="off">
+        <div id="chat-box" class="chat-box"></div>
+        <form id="chat-form">
+            <input type="text" id="user-input" placeholder="Digite sua pergunta..." autocomplete="off" />
             <button type="submit">Enviar</button>
         </form>
     </div>
