--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <title>UMA - Assistente da Somauma</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <title>UMA - Assistente da Somauma</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="chat-container">
-    <h1>UMA - Assistente da Somauma</h1>
-    <div id="chat-box" class="chat-box"></div>
-    <form id="chat-form">
-      <input type="text" id="user-input" placeholder="Digite sua pergunta..." autocomplete="off" />
-      <button type="submit">Enviar</button>
-    </form>
-  </div>
-  <script src="script.js"></script>
+    <div class="chatbox">
+        <h1>UMA - Assistente da Somauma</h1>
+        <div id="chat" class="chat-area"></div>
+        <div class="input-area">
+            <input type="text" id="userInput" placeholder="Digite sua pergunta...">
+            <button onclick="sendMessage()">Enviar</button>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
